--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <!-- header section -->
     <header>
       <h1>My <span>Tech Goals</span> for the Next 2 Years</h1>
     </header>
     <div class="container">
+      <!-- slack info section -->
       <div class="info">
         <section class="profile">
           <h2>Slack Information</h2>
@@ -34,6 +36,8 @@
             data-testid="slackProfilePicture"
           />
         </section>
+
+        <!-- some useful links section -->
         <section class="links">
           <h2>Useful Links</h2>
           <ul class="link-item">
@@ -56,6 +60,7 @@
         </section>
       </div>
 
+      <!-- Goals section -->
       <section class="goals">
         <h2>My Tech Goals</h2>
         <ul class="goal-list">
@@ -72,6 +77,7 @@
         </ul>
       </section>
     </div>
+    <!-- footer section -->
     <footer><h3>&copy;2024 Iyene Favour</h3></footer>
     <script src="script.js"></script>
   </body>
